Fix: Repair page not displaying 100vw on smaller screens

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -55,7 +55,9 @@ h5,
 h6 {
   overflow-wrap: break-word;
 }
-
+html, body {
+  min-width: 100vw;
+}
 #root,
 #__next {
   isolation: isolate;
